--- a/index.html
+++ b/index.html
@@ -20,51 +20,37 @@
         <Main>
             <section>
                 <h2>About Me</h2>
-                <p>lorem ipsum blah blah blah</p>
+                <p>lorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blah</p>
             </section>
             <section>
                 <h2>My Projects</h2>
-                <p>lorem ipsum blah blah blah</p>
+                <section class="cardcontainer">
+                    <section class="projectcard big img-portfolio">
+                        <p class="cardtext">Deveolpment Portfolio</br>HTML/CSS</p>
+                    </section>
+                    <section class="projectcard img-horiseon">
+                        <p class="cardtext">Horiseon Website</br>HTML/CSS</p>
+                    </section>
+                    <section class="projectcard img-camera">
+                        <p class="cardtext">Camera Automated PTZ</br>React/Node/API</p>
+                    </section>
+                    <section class="projectcard img-glow">
+                        <p class="cardtext">Glow Effects</br>HTML/CSS</p>
+                    </section>
+                    <section class="projectcard img-primes">
+                        <p class="cardtext">Calculate Prime Numbers</br>Python</p>
+                    </section>
+                </section>
             </section>
             <section>
                 <h2>Contact Me</h2>
-                <p>lorem ipsum blah blah blah</p>
-            </section>
-            <section>
-                <section class="projectcard">
-                    <img src="#" alt="" />
-                    <p class="projectname">Project Name</p>
-                    <p class="projectdesc">Project Description</p>
-                </section>
-                <section class="projectcard">
-                    <img src="#" alt="" />
-                    <p class="projectname">Project Name</p>
-                    <p class="projectdesc">Project Description</p>
-                </section>
-                <section class="projectcard">
-                    <img src="#" alt="" />
-                    <p class="projectname">Project Name</p>
-                    <p class="projectdesc">Project Description</p>
-                </section>
-                <section class="projectcard">
-                    <img src="#" alt="" />
-                    <p class="projectname">Project Name</p>
-                    <p class="projectdesc">Project Description</p>
-                </section>
-                <section class="projectcard">
-                    <img src="#" alt="" />
-                    <p class="projectname">Project Name</p>
-                    <p class="projectdesc">Project Description</p>
-                </section>
-                <section>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>one</li>
+                        <li>two</li>
+                        <li>three</li>
+                        <li>four</li>
+                        <li>five</li>
                     </ul>
-                </section>
             </section>
         </Main>
     </body>
