update images, some colors, links, added profile pic

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     </head>
     <body>
         <header>
+            <section class="profile">
+            <img src="./assets/images/profilesmall.jpg" />
             <h1>
-                Dewey Watkins
+                Dewey</br>Watkins
             </h1>
+            </section>
             <nav>
                 <ul>
                     <li><a href="#AboutMe">About Me</a></li>
@@ -19,11 +22,11 @@
         </header>
         <Main>
             <section>
-                <h2>About Me</h2>
+                <h2 id="AboutMe">About Me</h2>
                 <p>lorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blah</p>
             </section>
             <section>
-                <h2>My Projects</h2>
+                <h2 id="MyProjects">My Projects</h2>
                 <section class="cardcontainer">
                     <section class="projectcard big img-portfolio">
                         <p class="cardtext">Deveolpment Portfolio</br>HTML/CSS</p>
@@ -32,7 +35,7 @@
                         <p class="cardtext">Horiseon Website</br>HTML/CSS</p>
                     </section>
                     <section class="projectcard img-camera">
-                        <p class="cardtext">Camera Automated PTZ</br>React/Node/API</p>
+                        <p class="cardtext">Automated Camera PTZ</br>React/Node/API</p>
                     </section>
                     <section class="projectcard img-glow">
                         <p class="cardtext">Glow Effects</br>HTML/CSS</p>
@@ -43,13 +46,12 @@
                 </section>
             </section>
             <section>
-                <h2>Contact Me</h2>
+                <h2 id="ContactMe">Contact Me</h2>
                     <ul>
-                        <li>one</li>
-                        <li>two</li>
-                        <li>three</li>
-                        <li>four</li>
-                        <li>five</li>
+                        <li><a href="mailto:deweywatkins77@gmail.com">Email</a></li>
+                        <li><a href="tel:4047590007">Phone</a></li>
+                        <li><a href="https://www.linkedin.com/in/dewey-watkins">LinkedIn</a></li>
+                        <li><a href="https://github.com/deweywatkins77">GitHub</a></li>
                     </ul>
             </section>
         </Main>
