--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
         <Main>
             <section>
                 <h2 id="AboutMe">About Me</h2>
-                <p>lorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blahorem ipsum blah blah blah</p>
+                <p>
+                    I am a Computer Support Professional II. I love problem solving, which is why I have
+                    been attracted to programming. I started programming at the age of 10 by
+                    teaching myself BasicII. Ever since I have been building and utilizing those
+                    skills over the last 20 years at my current job. I have written numerous web applications, 
+                    programing scripts for server applications, designed websites, mentored numerous student programming assitants,
+                    and provide database administration on top of my other job functions. I am currently enrolled in a 
+                    full stack developer boot camp.
+                </p>
             </section>
             <section>
                 <h2 id="MyProjects">My Projects</h2>
