--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p>
                     I am a Computer Support Professional II. I love problem solving, which is why I have
                     been attracted to programming. I started programming at the age of 10 by
-                    teaching myself BasicII. Ever since I have been building and utilizing those
+                    teaching myself BasicII. Over the years I learned newer languages. I have been building and utilizing my
                     skills over the last 20 years at my current job. I have written numerous web applications, 
                     programing scripts for server applications, designed websites, mentored numerous student programming assitants,
                     and provide database administration on top of my other job functions. I am currently enrolled in a 
@@ -36,20 +36,20 @@
             <section>
                 <h2 id="MyProjects">My Projects</h2>
                 <section class="cardcontainer">
-                    <section class="projectcard big img-portfolio">
-                        <p class="cardtext">Deveolpment Portfolio</br>HTML/CSS</p>
+                    <section class="projectcard big img-portfolio" onclick="window.open('https://deweywatkins77.github.io/DevelopmentPortfolio/')">
+                        <p class="cardtext" onclick="window.open('https://deweywatkins77.github.io/DevelopmentPortfolio/')">Deveolpment Portfolio</br>HTML/CSS</p>
                     </section>
-                    <section class="projectcard img-horiseon">
-                        <p class="cardtext">Horiseon Website</br>HTML/CSS</p>
+                    <section class="projectcard img-horiseon"  onclick="window.open('https://deweywatkins77.github.io/Horiseon-Refactor/')">
+                        <p class="cardtext" onclick="window.open('https://deweywatkins77.github.io/Horiseon-Refactor/)">Horiseon Website</br>HTML/CSS</p>
                     </section>
-                    <section class="projectcard img-camera">
-                        <p class="cardtext">Automated Camera PTZ</br>React/Node/API</p>
+                    <section class="projectcard img-camera" onclick="window.open('https://github.com/deweywatkins77/autocameraptz')">
+                        <p class="cardtext" onclick="window.open('https://github.com/deweywatkins77/autocameraptz')">Automated Camera PTZ</br>React/Node/API</p>
                     </section>
-                    <section class="projectcard img-glow">
-                        <p class="cardtext">Glow Effects</br>HTML/CSS</p>
+                    <section class="projectcard img-glow" onclick="window.open('https://deweywatkins77.github.io/glow-effects/')">
+                        <p class="cardtext" onclick="window.open('https://deweywatkins77.github.io/glow-effects/')">Glow Effects</br>HTML/CSS</p>
                     </section>
-                    <section class="projectcard img-primes">
-                        <p class="cardtext">Calculate Prime Numbers</br>Python</p>
+                    <section class="projectcard img-primes" onclick="window.open('https://github.com/deweywatkins77/primecalculator')">
+                        <p class="cardtext" onclick="window.open('https://github.com/deweywatkins77/primecalculator')">Calculate Prime Numbers</br>Python</p>
                     </section>
                 </section>
             </section>
