some weird error from vscode but the lines were the same for the links. copied top link to p link and it fixed the issue

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <p class="cardtext" onclick="window.open('https://deweywatkins77.github.io/DevelopmentPortfolio/')">Deveolpment Portfolio</br>HTML/CSS</p>
                     </section>
                     <section class="projectcard img-horiseon"  onclick="window.open('https://deweywatkins77.github.io/Horiseon-Refactor/')">
-                        <p class="cardtext" onclick="window.open('https://deweywatkins77.github.io/Horiseon-Refactor/)">Horiseon Website</br>HTML/CSS</p>
+                        <p class="cardtext" onclick="window.open('https://deweywatkins77.github.io/Horiseon-Refactor/')">Horiseon Website</br>HTML/CSS</p>
                     </section>
                     <section class="projectcard img-camera" onclick="window.open('https://github.com/deweywatkins77/autocameraptz')" >
                         <p class="cardtext" onclick="window.open('https://github.com/deweywatkins77/autocameraptz')">Automated Camera PTZ</br>React/Node/API</p>
