update low resolution screen responsiveness

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html lang="en-us">
+<!DOCTYPE html>
     <head>
+        <lang="en-us">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./assets/style.css">
     </head>
