--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <lang="en-us">
         <meta charset="UTF-8">
+        <title>Dewey Watkins Portfolio</title>
         <link rel="stylesheet" href="./assets/style.css">
     </head>
     <body>
