--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
+<html lang="en-us">
     <head>
-        <lang="en-us">
         <meta charset="UTF-8">
         <title>Dewey Watkins Portfolio</title>
         <link rel="stylesheet" href="./assets/style.css">
