--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
             <section>
                 <h2 id="MyProjects">My Projects</h2>
                 <section class="cardcontainer">
-                    <section class="projectcard big img-portfolio" onclick="window.open('https://deweywatkins77.github.io/DevelopmentPortfolio/')">
-                        <p class="cardtext" onclick="window.open('https://deweywatkins77.github.io/DevelopmentPortfolio/')">Deveolpment Portfolio</br>HTML/CSS</p>
+                    <section class="projectcard big img-invManagement"  onclick="window.open('https://github.com/deweywatkins77/InventoryManagement')">
+                        <p class="cardtext">Inventory Management</br>JS/HTML/CSS</p>
                     </section>
-                    <section class="projectcard img-horiseon"  onclick="window.open('https://deweywatkins77.github.io/Horiseon-Refactor/')">
-                        <p class="cardtext" onclick="window.open('https://deweywatkins77.github.io/Horiseon-Refactor/')">Horiseon Website</br>HTML/CSS</p>
+                    <section class="projectcard img-portfolio" onclick="window.open('https://deweywatkins77.github.io/DevelopmentPortfolio/')">
+                        <p class="cardtext">Deveolpment Portfolio</br>HTML/CSS</p>
                     </section>
                     <section class="projectcard img-camera" onclick="window.open('https://github.com/deweywatkins77/autocameraptz')" >
-                        <p class="cardtext" onclick="window.open('https://github.com/deweywatkins77/autocameraptz')">Automated Camera PTZ</br>React/Node/API</p>
+                        <p class="cardtext">Automated Camera PTZ</br>React/Node/API</p>
                     </section>
                     <section class="projectcard img-glow" onclick="window.open('https://deweywatkins77.github.io/glow-effects/')">
-                        <p class="cardtext" onclick="window.open('https://deweywatkins77.github.io/glow-effects/')">Glow Effects</br>HTML/CSS</p>
+                        <p class="cardtext">Glow Effects</br>HTML/CSS</p>
                     </section>
                     <section class="projectcard img-primes" onclick="window.open('https://github.com/deweywatkins77/primecalculator')">
-                        <p class="cardtext" onclick="window.open('https://github.com/deweywatkins77/primecalculator')">Calculate Prime Numbers</br>Python</p>
+                        <p class="cardtext">Calculate Prime Numbers</br>Python</p>
                     </section>
                 </section>
             </section>
