--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <section class="projectcard big img-invManagement"  onclick="window.open('https://github.com/deweywatkins77/InventoryManagement')">
                         <p class="cardtext">Inventory Management</br>JS/HTML/CSS</p>
                     </section>
-                    <section class="projectcard img-portfolio" onclick="window.open('https://deweywatkins77.github.io/DevelopmentPortfolio/')">
-                        <p class="cardtext">Deveolpment Portfolio</br>HTML/CSS</p>
+                    <section class="projectcard img-portfolio" onclick="window.open('https://donatetrader-6968094a5822.herokuapp.com/')">
+                        <p class="cardtext">DonateTrader</br>MERN</p>
                     </section>
                     <section class="projectcard img-camera" onclick="window.open('https://github.com/deweywatkins77/autocameraptz')" >
                         <p class="cardtext">Automated Camera PTZ</br>React/Node/API</p>
